--- a/src/main/resources/templates/status.html
+++ b/src/main/resources/templates/status.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
     <title>Buy a Llama License</title>
 </head>
 <body>
